fix scrollbar on info sidebar

--- a/assets/scss/components/product-sidebar.scss
+++ b/assets/scss/components/product-sidebar.scss
@@ -8,7 +8,7 @@
     width: calc(100vw - 32px);
   }
   background: $header-background-color; box-shadow: -9px 0px 12px 5px rgba(0, 0, 0, 0.4); display: flex;
-  flex-direction: column; overflow: scroll; letter-spacing: 1px; padding-bottom: 120px;
+  flex-direction: column; overflow: auto; letter-spacing: 1px; padding-bottom: 120px;
 
   &-enter-active { transition: all 0.4s ease-out; }
 
